# werewolf-agent

./: .gitignore  LICENSE  README.ja.md  README.md  clean_cache.bat  pyproject.toml
.github/workflows/: ci.yml
src/: command.py
src/werewolf_agent/common/log/: __init__.py  logger.py
src/werewolf_agent/core/agents/: game_master.py
src/werewolf_agent/core/runtime/: game_engine.py
