[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werewolf_agent"
version = "0.1.0"
description = "werewolf agent for integration into AI applications"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "takafumi nishiwaki" }]
keywords = ["werewolf", "agent", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]

# ----------------------
# 本番利用
# ----------------------
main = ["pydantic>=2.8,<3"]

# ----------------------
# 開発・CI・Docs
# ----------------------
dev = [
  # test
  "pytest>=8,<9",
  "pytest-cov>=4,<6",

  # lint/format/type
  "ruff>=0.6",
  "mypy>=1.11",
  "types-setuptools",
  "pandas-stubs",

  # docs
  "sphinx>=8,<9",
  "myst-parser>=4,<5",
  "furo>=2024.0.0",
  "sphinx-autodoc-typehints>=2,<3",
]

all = ["werewolf_agent[main,dev]"]

# ----------------------
# Tool configurations
# ----------------------

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "dist",
  "build",
  "docs/_build",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# strict_equality = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
